--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather app</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id = "card">
+    <div id="card">
         <div id="search">
-            <input id="searchBox" type="text" placeholder="enter the city name" spellcheck="false">
-            <button id = "searchBtn"><img src = "search.png" > </button>
+            <input id="searchBox" type="text" placeholder="enter city name" spellcheck="false">
+            <button id="searchBtn"><img src="images/search.png"></button>
         </div>
-        <div id ="error">
+        <div id="error">
             <p>Invalid city name</p>
         </div>
         <div id="weather">
-            <img src="rain.png" id ="weather-icon">
-            <h1 id = "temp">22°C </h1>
-            <h2 id = "city"> New York </h2>
-            <div id = "details">
-                <div id = "col">
-                    <img src="humidity.png">
+            <img src="images/rain.png" id="weather-icon">
+            <h1 id="temp">22°C</h1>
+            <h2 id="city">New York</h2>
+            <div id="details">
+                <div id="col">
+                    <img src="images/humidity.png">
                     <div>
                         <p id="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
-                <div id = "col">
-                    <img src="wind.png">
+                <div id="col">
+                    <img src="images/wind.png">
                     <div>
-                        <p id="wind">15 km/h</p>
-                        <p>Wind Speed </p>
+                        <p id="wind">15 Km/hr</p>
+                        <p>Wind Speed</p>
                     </div>
                 </div>
             </div>
@@ -39,4 +41,5 @@
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
