--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <div id="card">
         <div id="search">
             <input id="searchBox" type="text" placeholder="enter city name" spellcheck="false">
-            <button id="searchBtn"><img src="images/search.png"></button>
+            <button id="searchBtn"><img src="./search.png"></button>
         </div>
         <div id="error">
             <p>Invalid city name</p>
         </div>
         <div id="weather">
-            <img src="images/rain.png" id="weather-icon">
+            <img src="./rain.png" id="weather-icon">
             <h1 id="temp">22°C</h1>
             <h2 id="city">New York</h2>
             <div id="details">
                 <div id="col">
-                    <img src="images/humidity.png">
+                    <img src="./humidity.png">
                     <div>
                         <p id="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div id="col">
-                    <img src="images/wind.png">
+                    <img src="./wind.png">
                     <div>
                         <p id="wind">15 Km/hr</p>
                         <p>Wind Speed</p>
